--- a/Colab_basics.ipynb
+++ b/Colab_basics.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Colab_basics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6dWKZMecu5WnzkzKdBDO8",
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNiZg3hn+ciggVY0W8IJ2yo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,9 +28,125 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lw4nTFs0kIAz",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Transfer Learning with TensorFlow 2.0"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "FxgowWpVjJKo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9a5f0b0d-2323-4348-ae91-43850b6b5775"
+      },
+      "source": [
+        "print(\"Hello transfer learning\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello transfer learning\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zGz6gMeBkeLd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%tensorflow_version 2.x"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G3od8rZHkC-0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import tensorflow as tf"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zc40OCtflFBS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "99ef9dc7-1d4b-4105-f5ed-490c4c09e991"
+      },
+      "source": [
+        "tf.version.VERSION"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.2.0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bEWY_X3enDOA",
+        "colab_type": "text"
+      },
+      "source": [
+        "# New Section\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XVanJkQJnbxe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/gdrive')\n",
+        "%cd /gdrive"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OP8TjbJ1nG3-",
         "colab_type": "code",
         "colab": {}
       },
